--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 			<a href="index.html">
 				<h2 class="animated flash">
 				<i class="fa fa-hospital"></i>&nbsp;
-				HMS</h2>
+				HMS.</h2>
 			</a>
 		</div>
 		<!-- End Brand name coding-->
