--- a/doctor.html
+++ b/doctor.html
@@ -50,7 +50,7 @@
             <button type="submit" id="register-btn">patients</button>
             <button type="submit" id="register-btn">add description</button>
             <button type="submit" id="register-btn">update my details</button>
-            <button type="submit" id="register-btn">logout</button>
+            <button type="submit" href="login.html" id="register-btn">logout</button>
      		 
            
             <h1>My Appointments</h1>
