--- a/doctor.html
+++ b/doctor.html
@@ -48,8 +48,8 @@
      	<form>
             <button type="submit" id="register-btn">Appointment details</button>
             <button type="submit" id="register-btn">patients</button>
-            <button type="submit" id="register-btn">add description</button>
-            <button type="submit" id="register-btn">update my details</button>
+            <button type="submit" href="" id="register-btn">add description</button>
+            <button type="submit" href=""id="register-btn">update my details</button>
             <button type="submit" href="login.html" id="register-btn">logout</button>
      		 
            
