--- a/doctor.html
+++ b/doctor.html
@@ -38,7 +38,7 @@
 		<!-- End Nav coding & menu coding -->
 	</div>
 </header>
-<!-- End Header Coding-->
+<!-- End Header .Coding-->
 <!-- Start Section Coding-->
 <section>
 	<div class="w-80">
