--- a/logins.html
+++ b/logins.html
@@ -4,9 +4,24 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="keywords" content="HOSPITAL,HOSPITAL.COM,HOSPITAL WEBSITE, MEDICAN">
-	<meta name="description" content="best hospital website ">
+	<meta name="description" content="best hospital website  ">
 	<meta name="author" content="hospital.com">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>HMS</title>
+	<!-- Fav  Icon Link -->
+	<link rel="shortcut icon" type="image/png" href="images/fav.png">
+	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- themify icons CSS -->
+	<link rel="stylesheet" href="css/themify-icons.css">
+	<!-- Main CSS -->
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/green.css" id="style_theme">
+	<link rel="stylesheet" href="css/responsive.css">
+
+	<script src="js/modernizr.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
 	<link rel="stylesheet" type="text/css" href="css/animate1.css">
@@ -30,8 +45,9 @@
          		<li><a href="index1.html">Home</a></li>
          		<li><a href="gallery.html">Gallery</a></li>
          		<li><a href="registers.html">Register</a></li>
-         		<li><a href="logins.html">Login</a></li>
+				 <li><a href="logins.html">Login</a></li>
          		<li><a href="contact.html">Contact Us</a></li>
+				 
          	</ul>
          </nav>
 		<!-- End Nav coding & menu coding -->
@@ -42,29 +58,29 @@
 <section>
 	<div class="w-80">
      <div class="form-box">
-     	<h1>Contact Us</h1>
+     	<h1>Login Page</h1>
      	<hr>
      	<form>
-     		<label for="fullname"><b>Your name :</b></label><br/>
-				<input type="text" name="name" id="fullname" placeholder="Enter Fullname">
+     		<label for="username"><b>Username :</b></label><br/>
+				<input type="text" name="username" id="username" />
 				<br/><br/>
 
-				<label for="email"><b>Email :</b></label>
+				<label for="password"><b>Password :</b></label>
 				<br/>
-				<input type="email" name="email" id="email" placeholder="Enter Your Email">
+				<input type="password" name="password" id="password" />
 				<br/><br/>
 
-				<label for="message"><b>Your message :</b></label>
-				<br/>
-				<textarea id="message" placeholder="Enter Your Message"></textarea>
+				<button type="submit" id="login-btn"><a href="patient.html">Login</a></li></button>
+				<button type="submit" id="login-btn"><a href="index.html">Login staff</a></li></button>
+				<button type="submit" id="login-btn"><a href="registers.html">Register New User</a></button>
 				<br/><br/>
-
-				<button type="submit" id="contact-btn">Send Email</button>
+				<p>Forget Password ? <a href="register.html">Click Here</a></p>
      	</form>
      </div>
     </div>
 </section>
 <!-- End Section Coding-->
+ 
 <!-- Start Footer Coding-->
 <footer>
 	<div class="w-80">
