--- a/patient.html
+++ b/patient.html
@@ -6,10 +6,10 @@
 	<meta name="keywords" content="HOSPITAL,HOSPITAL.COM,HOSPITAL WEBSITE, MEDICAN">
 	<meta name="description" content="best hospital website  ">
 	<meta name="author" content="hospital.com">
-	<title>st. Rotich’s Hospital</title>
+	<title>HMS</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<link rel="stylesheet" type="text/css" href="css/animate1.css">
 </head>
 <body>
 <!-- Start Header Coding-->
@@ -17,7 +17,7 @@
 	<div class="menu">
 		<!-- Start Brand name coding-->
 		<div class="brand-name">
-			<a href="index.html">
+			<a href="index1.html">
 				<h2 class="animated flash">
 				<i class="fa fa-hospital"></i>&nbsp;
 				HMS</h2>
@@ -27,10 +27,10 @@
 		<!-- Start Nav coding & menu coding -->
          <nav>
          	<ul>
-         		<li><a href="index.html">Home</a></li>
+         		<li><a href="index1.html">Home</a></li>
          		<li><a href="gallery.html">Gallery</a></li>
-                 <li><a href="register.html">Register</a></li>
-         		<li><a href="login.html">Login</a></li>
+                 <li><a href="registers.html">Register</a></li>
+         		<li><a href="logins.html">Login</a></li>
          		<li><a href="contact.html">Contact Us</a></li>
 				 
          	</ul>
