--- a/404.html
+++ b/404.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>HMS</title>
+	<title>Hospital Management System</title>
 	<!-- Fav  Icon Link -->
 	<link rel="shortcut icon" type="image/png" href="images/fav.png">
 	<!-- Bootstrap core CSS -->
@@ -19,10 +18,6 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/green.css" id="style_theme">
 	<link rel="stylesheet" href="css/responsive.css">
-	<!-- morris charts -->
-	<link rel="stylesheet" href="charts/css/morris.css">
-	<!-- jvectormap -->
-	<link rel="stylesheet" href="css/jquery-jvectormap.css">
 
 	<script src="js/modernizr.min.js"></script>
 </head>
@@ -48,10 +43,9 @@
 		<span class="theme-color theme-yellow" data-color="yellow"></span>
 	</div>
 	<!-- /Color Changer -->
-	<div class="wrapper">		
+	<div class="wrapper">
 		<!-- Page Content -->
-		<div id="content">
-			<!-- Top Navigation -->
+		<div id="content"><!-- Top Navigation -->
 			<div class="container top-brand">
 				<nav class="navbar navbar-default">			
 					<div class="navbar-header">
@@ -117,8 +111,8 @@
 									<span class="ti-settings"></span> Settings</a>
 								<a class="dropdown-item" href="#">
 									<span class="ti-help-alt"></span> Help</a>
-								<a class="dropdown-item" href="#">
-									<span class="ti-power-off" href="index1.html"></span> Logout</a>
+								<a class="dropdown-item" href="index1.html">
+									<span class="ti-power-off"></span> Logout</a>
 							</div>
 						</li>
 					</ul>
@@ -136,11 +130,10 @@
 			
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
-							<li class="nav-item dropdown active">
+							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 								 aria-expanded="false"><span class="ti-home"></span> Dashboard</a>
 								<div class="dropdown-menu">
-									 
 									<a class="dropdown-item" href="#">Vertical</a>
 									<a class="dropdown-item" href="index.html">Horizantal</a>
 								</div>
@@ -219,7 +212,7 @@
 									<a class="dropdown-item" href="themify.html">Themify</a>
 								</div>
 							</li>
-							<li class="nav-item dropdown">
+							<li class="nav-item dropdown active">
 								<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 								 aria-expanded="false"><span class="ti-file"></span> Other Pages</a>
 								<div class="dropdown-menu">
@@ -242,7 +235,7 @@
 			<div class="container mt-0">
 				<div class="row breadcrumb-bar">
 					<div class="col-md-6">
-						<h3 class="block-title">Quick Statistics</h3>
+						<h3 class="block-title">404 Page</h3>
 					</div>
 					<div class="col-md-6">
 						<ol class="breadcrumb">
@@ -251,7 +244,7 @@
 									<span class="ti-home"></span>
 								</a>
 							</li>
-							<li class="breadcrumb-item active">Dashboard</li>
+							<li class="breadcrumb-item active">404 Page</li>
 						</ol>
 					</div>
 				</div>
@@ -259,217 +252,18 @@
 			<!-- /Page Title -->
 			<!-- /Breadcrumb -->
 			<!-- Main Content -->
-			<div class="container home">
+			<div class="container">				
 				<div class="row">
-					<!-- Widget Item -->
-					<div class="col-md-4">
-						<div class="widget-area proclinic-box-shadow color-red">
-							<div class="widget-left">
-								<span class="ti-user"></span>
-							</div>
-							<div class="widget-right">
-								<h4 class="wiget-title">Patients</h4>
-								<span class="numeric color-red">348</span>
-								<p class="inc-dec mb-0"><span class="ti-angle-up"></span> +20% Increased</p>
-							</div>
-						</div>
-					</div>
-					<!-- /Widget Item -->
-					<!-- Widget Item -->
-					<div class="col-md-4">
-						<div class="widget-area proclinic-box-shadow color-green">
-							<div class="widget-left">
-								<span class="ti-bar-chart"></span>
-							</div>
-							<div class="widget-right">
-								<h4 class="wiget-title">Appointments</h4>
-								<span class="numeric color-green">1585</span>
-								<p class="inc-dec mb-0"><span class="ti-angle-down"></span> -15% Decreased</p>
-							</div>
-						</div>
-					</div>
-					<!-- /Widget Item -->
-					<!-- Widget Item -->
-					<div class="col-md-4">
-						<div class="widget-area proclinic-box-shadow color-yellow">
-							<div class="widget-left">
-								<span class="ti-money"></span>
-							</div>
-							<div class="widget-right">
-								<h4 class="wiget-title">Total Revenue</h4>
-								<span class="numeric color-yellow">$7300</span>
-								<p class="inc-dec mb-0"><span class="ti-angle-up"></span> +10% Increased</p>
-							</div>
-						</div>
-					</div>
-					<!-- /Widget Item -->
-				</div>
-
-				<div class="row">
-					<!-- Widget Item -->
-					<div class="col-md-6">
-						<div class="widget-area-2 proclinic-box-shadow">
-							<h3 class="widget-title">Appointments Year by Year</h3>
-							<div id="lineMorris" class="chart-home"></div>
-						</div>
-					</div>
-					<!-- /Widget Item -->
-					<!-- Widget Item -->
-					<div class="col-md-6">
-						<div class="widget-area-2 proclinic-box-shadow">
-							<h3 class="widget-title"> Patients Year by Year</h3>
-							<div id="barMorris" class="chart-home"></div>
-						</div>
-					</div>
-					<!-- /Widget Item -->
-				</div>
-
-				<div class="row">
-					<!-- Widget Item -->
 					<div class="col-md-12">
-						<div class="widget-area-2 proclinic-box-shadow">
-							<h3 class="widget-title">Appointments</h3>
-							<div class="table-responsive">
-								<table class="table table-bordered table-striped">
-									<thead>
-										<tr>
-											<th>Patient Name</th>
-											<th>Doctor</th>
-											<th>Check-Up</th>
-											<th>Date</th>
-											<th>Time</th>
-											<th>Status</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Wojtech</td>
-											<td>Cuba Andrej</td>
-											<td>Dental</td>
-											<td>12-10-2022</td>
-											<td>12:10PM</td>
-											<td>
-												<span class="badge badge-success">Completed</span>
-											</td>
-										</tr>
-										<tr>
-											<td>Mikael</td>
-											<td>Ishak</td>
-											<td>Ortho</td>
-											<td>12-10-2022</td>
-											<td>1:10PM</td>
-											<td>
-												<span class="badge badge-warning">Pending</span>
-											</td>
-										</tr>
-										<tr>
-											<td>Adriel</td>
-											<td>Loua </td>
-											<td>Ortho</td>
-											<td>12-10-2022</td>
-											<td>1:30PM</td>
-											<td>
-												<span class="badge badge-danger">Cancelled</span>
-											</td>
-										</tr>
-										<tr>
-											<td>Filip</td>
-											<td>Dagerstål</td>
-											<td>Dental</td>
-											<td>12-10-2022</td>
-											<td>12:10PM</td>
-											<td>
-												<span class="badge badge-success">Completed</span>
-											</td>
-										</tr>
-										<tr>
-											<td>Artur</td>
-											<td>Sobiech </td>
-											<td>Ortho</td>
-											<td>12-10-2022</td>
-											<td>1:10PM</td>
-											<td>
-												<span class="badge badge-warning">Pending</span>
-											</td>
-										</tr>
-										<tr>
-											<td>Pedro</td>
-											<td>Rebocho </td>
-											<td>Ortho</td>
-											<td>12-10-2022</td>
-											<td>1:30PM</td>
-											<td>
-												<span class="badge badge-danger">Cancelled</span>
-											</td>
-										</tr>
-									</tbody>
-								</table>
+						<div class="widget-area-2 proclinic-box-shadow min-h200">
+							<h3 class="widget-title">Page Not Found</h3>
+							<div class="text-center">
+								<span class="ti-unlink unlink"></span>
 							</div>
 						</div>
 					</div>
-					<!-- /Widget Item -->
 				</div>
 
-				<div class="row">
-					<!-- Widget Item -->
-					<div class="col-sm-6">
-						<div class="widget-area-2 proclinic-box-shadow">
-							<h3 class="widget-title">Appointments Status</h3>
-							<div id="donutMorris" class="chart-home"></div>
-						</div>
-					</div>
-					<!-- /Widget Item -->
-					<!-- Widget Item -->
-					<div class="col-md-6">
-						<div class="widget-area-2 progress-status proclinic-box-shadow">
-							<h3 class="widget-title">Doctors Availability</h3>
-							<div class="table-responsive">
-								<table class="table table-bordered">
-									<thead>
-										<tr>
-											<th>Doctor</th>
-											<th>Speciality</th>
-											<th>Availability</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Cuba</td>
-											<td>Dental</td>
-											<td>
-												<span class="badge badge-success">Available</span>
-											</td>
-										</tr>
-										<tr>
-											<td>Ishak</td>
-											<td>Ortho</td>
-											<td>
-												<span class="badge badge-warning">On Leave</span>
-											</td>
-										</tr>
-										<tr>
-											<td>Siri</td>
-											<td>Skin</td>
-											<td>
-												<span class="badge badge-danger">Not Available</span>
-											</td>
-										</tr>
-										<tr>
-											<td>Dagerstål</td>
-											<td>Dental</td>
-											<td>
-												<span class="badge badge-success">Available</span>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-
-						</div>
-					</div>
-					<!-- /Widget Item -->
-
-				</div>
 
 			</div>
 			<!-- /Main Content -->
@@ -481,7 +275,6 @@
 			</div>
 			<!-- /Copy Rights-->
 		</div>
-		<!-- /Page Content -->
 	</div>
 	<!-- Back to Top -->
 	<a id="back-to-top" href="#" class="back-to-top">
@@ -494,15 +287,8 @@
 	<script src="js/popper.min.js"></script>
 	<!-- Bootstrap Library-->
 	<script src="js/bootstrap.min.js"></script>
-	<!-- morris charts -->
-	<script src="charts/js/raphael-min.js"></script>
-	<script src="charts/js/morris.min.js"></script>
-	<script src="js/custom-morris.js"></script>
-
 	<!-- Custom Script-->
 	<script src="js/custom.js"></script>
 </body>
 
-
-<!-- end of coding -->
 </html>
