--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 									<span class="ti-settings"></span> Settings</a>
 								<a class="dropdown-item" href="#">
 									<span class="ti-help-alt"></span> Help</a>
-								<a class="dropdown-item" href="#">
-									<span class="ti-power-off" href="index1.html"></span> Logout</a>
+								<a class="dropdown-item" href="index1.html">
+									<span class="ti-power-off"></span> Logout</a>
 							</div>
 						</li>
 					</ul>
@@ -141,7 +141,7 @@
 								 aria-expanded="false"><span class="ti-home"></span> Dashboard</a>
 								<div class="dropdown-menu">
 									 
-									<a class="dropdown-item" href="#">Vertical</a>
+									<a class="dropdown-item" href="Defence presentation-Erick Rotich.pptx">Presentation</a>
 									<a class="dropdown-item" href="index.html">Horizantal</a>
 								</div>
 							</li>
