--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 								 aria-expanded="false"><span class="ti-home"></span> Dashboard</a>
 								<div class="dropdown-menu">
-									 <a class="dropdown-item" href="#">Thesis</a>
+									 <a class="dropdown-item" href="Thesis.pdf">Thesis</a>
 									 <a class="dropdown-item" href="Defence presentation-Erick Rotich.pdf">Presentation pdf</a>
 									<a class="dropdown-item" href="Defence presentation-Erick Rotich.pptx">Presentation pptx</a>
 									<a class="dropdown-item" href="index.html">Horizantal</a>
