--- a/logins.html
+++ b/logins.html
@@ -70,7 +70,7 @@
 				<input type="password" name="password" id="password" />
 				<br/><br/>
 
-				<button type="submit" id="login-btn"><a href="patient.html">Login</a></li></button>
+				<button type="submit" id="login-btn"><a href="index.html">Login</a></li></button>
 				<button type="submit" id="login-btn"><a href="index.html">Login staff</a></li></button>
 				<button type="submit" id="login-btn"><a href="registers.html">Register New User</a></button>
 				<br/><br/>
