--- a/patient.html
+++ b/patient.html
@@ -23,7 +23,7 @@
 				HMS</h2>
 			</a>
 		</div>
-		<!-- End Brand name coding-->
+		<!-- End Brand name in coding-->
 		<!-- Start Nav coding & menu coding -->
          <nav>
          	<ul>
